tests/valid/control_flow/if_many_elif.fig
// Multiple elif branches
func classify(x: i32) -> ok
    if x < 0
        pass
    elif x == 0
        pass
    elif x < 10
        pass
    elif x < 100
        pass
    else
        pass
