tests/invalid/syntax/duplicate_visibility.fig
// Invalid: Multiple visibility modifiers on same item
export public func duplicate_visibility() -> ok
    pass
